--- a/notebooks/region_of_interest.ipynb
+++ b/notebooks/region_of_interest.ipynb
@@ -94,7 +94,7 @@
    "source": [
     "#computer_path = 'X:/'\n",
     "computer_path = '/Volumes/nbdid-sst-lbrat2104/'\n",
-    "grp_letter    = 'X'\n",
+    "grp_letter    = 'K'\n",
     "\n",
     "# Directory for all work files\n",
     "work_path = f'{computer_path}GROUP_{grp_letter}/WORK/'\n",
@@ -108,6 +108,8 @@
     "# EPSG of your ROI\n",
     "\n",
     "crs_dst = 'EPSG:32631'    # WGS 84 / UTM zone 31N\n",
+    "crs_dst = 'EPSG:32736'    # WGS 84 / UTM zone 36S\n",
+    "\n",
     "\n",
     "roi_name      = 'extent_roi'\n",
     "roi_extension = '.shp'\n",
@@ -124,17 +126,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# EPSG of your coordinates\n",
-    "crs_src = 'EPSG:32631'\n",
+    "#crs_src = 'EPSG:32631'\n",
     "\n",
-    "ulx = 627263.7\n",
-    "uly = 5596175.1\n",
-    "lrx = 637115\n",
-    "lry = 5590485.2"
+    "#ulx = 627263.7\n",
+    "#uly = 5596175.1\n",
+    "#lrx = 637115\n",
+    "#lry = 5590485.2\n",
+    "\n",
+    "crs_src = 'EPSG:4326'\n",
+    "\n",
+    "ulx = 34.633026\n",
+    "uly = -23.031715\n",
+    "lrx = 34.82666 \n",
+    "lry = -22.850867"
    ]
   },
   {
@@ -146,14 +155,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "ROI CRS : EPSG:32631 \n\nA new vector file is created : /Users/Nicolas/Documents/LBRAT2104/WORK/ROI/extent_roi_32631.shp\n"
+      "ROI CRS : EPSG:32736 \n",
+      "\n",
+      "A new vector file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_K/WORK/ROI/extent_roi_32736.shp\n"
      ]
     }
    ],
@@ -188,6 +199,13 @@
     "else:\n",
     "    print('The ROI vector file already exists --> delete it or change the variable \"roi_name\" if you want to create a new one')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
