--- a/notebooks/sentinel_2_prepro.ipynb
+++ b/notebooks/sentinel_2_prepro.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -87,21 +87,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "General work path is set to     : /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/\nL2A SAFE folders path is set to : /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/L2A/\n"
+      "General work path is set to     : /Volumes/nbdid-sst-lbrat2104/GROUP_K/WORK/\nL2A SAFE folders path is set to : /Volumes/nbdid-sst-lbrat2104/GROUP_K/WORK/L2A/\n"
      ]
     }
    ],
    "source": [
     "#computer_path = 'X:/'\n",
     "computer_path = '/Volumes/nbdid-sst-lbrat2104/'\n",
-    "grp_letter    = 'X'\n",
+    "grp_letter    = 'K'\n",
     "\n",
     "# Directory for all work files\n",
     "work_path = f'{computer_path}GROUP_{grp_letter}/WORK/'\n",
@@ -160,13 +160,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "band_10m_list = [2,3,4,8]\n",
+    "band_10m_list = [4,8]\n",
     "\n",
-    "band_20m_list = [5,11]"
+    "band_20m_list = []"
    ]
   },
   {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,14 +211,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "12 L2A will be pre-processed \n\nS2A_MSIL2A_20200417T104021_N0214_R008_T31UFS_20200417T112906.SAFE\nS2A_MSIL2A_20200520T105031_N0214_R051_T31UFS_20200520T134332.SAFE\nS2A_MSIL2A_20200719T105031_N0214_R051_T31UFS_20200719T134605.SAFE\nS2A_MSIL2A_20200914T104031_N0214_R008_T31UFS_20200914T133417.SAFE\nS2B_MSIL2A_20200116T105309_N0213_R051_T31UFS_20200116T122813.SAFE\nS2B_MSIL2A_20200212T104049_N0214_R008_T31UFS_20200213T134833.SAFE\nS2B_MSIL2A_20200316T104709_N0214_R051_T31UFS_20200316T135256.SAFE\nS2B_MSIL2A_20200621T103629_N0214_R008_T31UFS_20200621T140338.SAFE\nS2B_MSIL2A_20200813T104629_N0214_R051_T31UFS_20200813T133458.SAFE\nS2B_MSIL2A_20201019T103959_N0214_R008_T31UFS_20201019T140516.SAFE\nS2B_MSIL2A_20201118T104329_N0214_R008_T31UFS_20201118T123717.SAFE\nS2B_MSIL2A_20201218T104349_N0214_R008_T31UFS_20201218T124059.SAFE\n"
+      "9 L2A will be pre-processed \n\nS2A_MSIL2A_20180101T074231_N9999_R049_T36KXU_20210427T145530.SAFE\nS2A_MSIL2A_20180511T072621_N9999_R049_T36KXU_20210427T161149.SAFE\nS2A_MSIL2A_20180610T072621_N9999_R049_T36KXU_20210428T080722.SAFE\nS2A_MSIL2A_20180630T072621_N9999_R049_T36KXU_20210428T085733.SAFE\nS2A_MSIL2A_20180730T072621_N9999_R049_T36KXU_20210428T103721.SAFE\nS2A_MSIL2A_20180928T072651_N9999_R049_T36KXU_20210428T121956.SAFE\nS2A_MSIL2A_20181207T073301_N9999_R049_T36KXU_20210428T130827.SAFE\nS2B_MSIL2A_20180824T072609_N9999_R049_T36KXU_20210428T113108.SAFE\nS2B_MSIL2A_20191227T073229_N0213_R049_T36KXU_20201125T070221.SAFE\n"
      ]
     }
    ],
@@ -245,25 +245,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/1_L2A_RESAMPLED/T31UFS_20200417T104021_SCL_10m.tif - already exists\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/1_L2A_RESAMPLED/T31UFS_20200520T105031_SCL_10m.tif - already exists\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/1_L2A_RESAMPLED/T31UFS_20200719T105031_SCL_10m.tif - already exists\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/1_L2A_RESAMPLED/T31UFS_20200914T104031_SCL_10m.tif - already exists\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/1_L2A_RESAMPLED/T31UFS_20200116T105309_SCL_10m.tif - already exists\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/1_L2A_RESAMPLED/T31UFS_20200212T104049_SCL_10m.tif - already exists\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/1_L2A_RESAMPLED/T31UFS_20200316T104709_SCL_10m.tif - already exists\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/1_L2A_RESAMPLED/T31UFS_20200621T103629_SCL_10m.tif - already exists\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/1_L2A_RESAMPLED/T31UFS_20200813T104629_SCL_10m.tif - already exists\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/1_L2A_RESAMPLED/T31UFS_20201019T103959_SCL_10m.tif - already exists\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/1_L2A_RESAMPLED/T31UFS_20201118T104329_SCL_10m.tif - already exists\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/1_L2A_RESAMPLED/T31UFS_20201218T104349_SCL_10m.tif - already exists\n"
+      "--> A new resampled raster file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_K/WORK/1_L2A_RESAMPLED/T36KXU_20180101T074231_SCL_10m.tif\n",
+      "--> A new resampled raster file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_K/WORK/1_L2A_RESAMPLED/T36KXU_20180511T072621_SCL_10m.tif\n",
+      "--> A new resampled raster file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_K/WORK/1_L2A_RESAMPLED/T36KXU_20180610T072621_SCL_10m.tif\n",
+      "--> A new resampled raster file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_K/WORK/1_L2A_RESAMPLED/T36KXU_20180630T072621_SCL_10m.tif\n",
+      "--> A new resampled raster file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_K/WORK/1_L2A_RESAMPLED/T36KXU_20180730T072621_SCL_10m.tif\n",
+      "--> A new resampled raster file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_K/WORK/1_L2A_RESAMPLED/T36KXU_20180928T072651_SCL_10m.tif\n",
+      "--> A new resampled raster file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_K/WORK/1_L2A_RESAMPLED/T36KXU_20181207T073301_SCL_10m.tif\n",
+      "--> A new resampled raster file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_K/WORK/1_L2A_RESAMPLED/T36KXU_20180824T072609_SCL_10m.tif\n",
+      "--> A new resampled raster file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_K/WORK/1_L2A_RESAMPLED/T36KXU_20191227T073229_SCL_10m.tif\n"
      ]
     }
    ],
@@ -326,64 +323,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Band : 5\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/1_L2A_RESAMPLED/T31UFS_20200417T104021_B05_10m.tif - already exists\n",
-      "Band : 11\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/1_L2A_RESAMPLED/T31UFS_20200417T104021_B11_10m.tif - already exists\n",
-      "Band : 5\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/1_L2A_RESAMPLED/T31UFS_20200520T105031_B05_10m.tif - already exists\n",
-      "Band : 11\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/1_L2A_RESAMPLED/T31UFS_20200520T105031_B11_10m.tif - already exists\n",
-      "Band : 5\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/1_L2A_RESAMPLED/T31UFS_20200719T105031_B05_10m.tif - already exists\n",
-      "Band : 11\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/1_L2A_RESAMPLED/T31UFS_20200719T105031_B11_10m.tif - already exists\n",
-      "Band : 5\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/1_L2A_RESAMPLED/T31UFS_20200914T104031_B05_10m.tif - already exists\n",
-      "Band : 11\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/1_L2A_RESAMPLED/T31UFS_20200914T104031_B11_10m.tif - already exists\n",
-      "Band : 5\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/1_L2A_RESAMPLED/T31UFS_20200116T105309_B05_10m.tif - already exists\n",
-      "Band : 11\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/1_L2A_RESAMPLED/T31UFS_20200116T105309_B11_10m.tif - already exists\n",
-      "Band : 5\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/1_L2A_RESAMPLED/T31UFS_20200212T104049_B05_10m.tif - already exists\n",
-      "Band : 11\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/1_L2A_RESAMPLED/T31UFS_20200212T104049_B11_10m.tif - already exists\n",
-      "Band : 5\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/1_L2A_RESAMPLED/T31UFS_20200316T104709_B05_10m.tif - already exists\n",
-      "Band : 11\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/1_L2A_RESAMPLED/T31UFS_20200316T104709_B11_10m.tif - already exists\n",
-      "Band : 5\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/1_L2A_RESAMPLED/T31UFS_20200621T103629_B05_10m.tif - already exists\n",
-      "Band : 11\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/1_L2A_RESAMPLED/T31UFS_20200621T103629_B11_10m.tif - already exists\n",
-      "Band : 5\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/1_L2A_RESAMPLED/T31UFS_20200813T104629_B05_10m.tif - already exists\n",
-      "Band : 11\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/1_L2A_RESAMPLED/T31UFS_20200813T104629_B11_10m.tif - already exists\n",
-      "Band : 5\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/1_L2A_RESAMPLED/T31UFS_20201019T103959_B05_10m.tif - already exists\n",
-      "Band : 11\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/1_L2A_RESAMPLED/T31UFS_20201019T103959_B11_10m.tif - already exists\n",
-      "Band : 5\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/1_L2A_RESAMPLED/T31UFS_20201118T104329_B05_10m.tif - already exists\n",
-      "Band : 11\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/1_L2A_RESAMPLED/T31UFS_20201118T104329_B11_10m.tif - already exists\n",
-      "Band : 5\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/1_L2A_RESAMPLED/T31UFS_20201218T104349_B05_10m.tif - already exists\n",
-      "Band : 11\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/1_L2A_RESAMPLED/T31UFS_20201218T104349_B11_10m.tif - already exists\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for L2A_safe in list_L2A:\n",
     "\n",
