--- a/notebooks/region_of_interest.ipynb
+++ b/notebooks/region_of_interest.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -88,13 +88,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#computer_path = 'X:/'\n",
     "computer_path = '/Volumes/nbdid-sst-lbrat2104/'\n",
-    "grp_letter    = 'K'\n",
+    "grp_letter    = 'X'\n",
     "\n",
     "# Directory for all work files\n",
     "work_path = f'{computer_path}GROUP_{grp_letter}/WORK/'\n",
@@ -108,8 +108,6 @@
     "# EPSG of your ROI\n",
     "\n",
     "crs_dst = 'EPSG:32631'    # WGS 84 / UTM zone 31N\n",
-    "crs_dst = 'EPSG:32736'    # WGS 84 / UTM zone 36S\n",
-    "\n",
     "\n",
     "roi_name      = 'extent_roi'\n",
     "roi_extension = '.shp'\n",
@@ -126,24 +124,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# EPSG of your coordinates\n",
-    "#crs_src = 'EPSG:32631'\n",
+    "crs_src = 'EPSG:32631'\n",
     "\n",
-    "#ulx = 627263.7\n",
-    "#uly = 5596175.1\n",
-    "#lrx = 637115\n",
-    "#lry = 5590485.2\n",
-    "\n",
-    "crs_src = 'EPSG:4326'\n",
-    "\n",
-    "ulx = 34.633026\n",
-    "uly = -23.031715\n",
-    "lrx = 34.82666 \n",
-    "lry = -22.850867"
+    "ulx = 627263.7\n",
+    "uly = 5596175.1\n",
+    "lrx = 637115\n",
+    "lry = 5590485.2\n"
    ]
   },
   {
@@ -155,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -199,13 +190,6 @@
     "else:\n",
     "    print('The ROI vector file already exists --> delete it or change the variable \"roi_name\" if you want to create a new one')\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ]
 }
