--- a/notebooks/spectral_indices.ipynb
+++ b/notebooks/spectral_indices.ipynb
@@ -162,14 +162,14 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "General work path is set to   : /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/\nSpectral index path is set to : /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDVI/\n"
+      "General work path is set to   : /Volumes/nbdid-sst-lbrat2104/GROUP_K/WORK/\nSpectral index path is set to : /Volumes/nbdid-sst-lbrat2104/GROUP_K/WORK/NDVI/\n"
      ]
     }
    ],
    "source": [
     "#computer_path = 'X:/'\n",
     "computer_path = '/Volumes/nbdid-sst-lbrat2104/'\n",
-    "grp_letter    = 'X'\n",
+    "grp_letter    = 'K'\n",
     "\n",
     "# Directory for all work files\n",
     "work_path = f'{computer_path}GROUP_{grp_letter}/WORK/'\n",
@@ -212,7 +212,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "We need band 4 to compute NDVI\n--> 12 images are found \n\nWe need band 8 to compute NDVI\n--> 12 images are found \n\nCheck if the number of images found for each band is the same !!\n"
+      "We need band 4 to compute NDVI\n--> 9 images are found \n\nWe need band 8 to compute NDVI\n--> 9 images are found \n\nCheck if the number of images found for each band is the same !!\n"
      ]
     }
    ],
@@ -247,30 +247,15 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDVI/T31UFS_20200116T105309_NDVI.tif - already exists\n",
-      "-------------------------------------------\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDVI/T31UFS_20200212T104049_NDVI.tif - already exists\n",
-      "-------------------------------------------\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDVI/T31UFS_20200316T104709_NDVI.tif - already exists\n",
-      "-------------------------------------------\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDVI/T31UFS_20200417T104021_NDVI.tif - already exists\n",
-      "-------------------------------------------\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDVI/T31UFS_20200520T105031_NDVI.tif - already exists\n",
-      "-------------------------------------------\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDVI/T31UFS_20200621T103629_NDVI.tif - already exists\n",
-      "-------------------------------------------\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDVI/T31UFS_20200719T105031_NDVI.tif - already exists\n",
-      "-------------------------------------------\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDVI/T31UFS_20200813T104629_NDVI.tif - already exists\n",
-      "-------------------------------------------\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDVI/T31UFS_20200914T104031_NDVI.tif - already exists\n",
-      "-------------------------------------------\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDVI/T31UFS_20201019T103959_NDVI.tif - already exists\n",
-      "-------------------------------------------\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDVI/T31UFS_20201118T104329_NDVI.tif - already exists\n",
-      "-------------------------------------------\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDVI/T31UFS_20201218T104349_NDVI.tif - already exists\n",
-      "-------------------------------------------\n"
+      "A new NDVI file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_K/WORK/NDVI/T36KXU_20180101T074231_NDVI.tif\n",
+      "A new NDVI file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_K/WORK/NDVI/T36KXU_20180511T072621_NDVI.tif\n",
+      "A new NDVI file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_K/WORK/NDVI/T36KXU_20180610T072621_NDVI.tif\n",
+      "A new NDVI file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_K/WORK/NDVI/T36KXU_20180630T072621_NDVI.tif\n",
+      "A new NDVI file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_K/WORK/NDVI/T36KXU_20180730T072621_NDVI.tif\n",
+      "A new NDVI file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_K/WORK/NDVI/T36KXU_20180824T072609_NDVI.tif\n",
+      "A new NDVI file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_K/WORK/NDVI/T36KXU_20180928T072651_NDVI.tif\n",
+      "A new NDVI file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_K/WORK/NDVI/T36KXU_20181207T073301_NDVI.tif\n",
+      "A new NDVI file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_K/WORK/NDVI/T36KXU_20191227T073229_NDVI.tif\n"
      ]
     }
    ],
