--- a/notebooks/zonal_stats.ipynb
+++ b/notebooks/zonal_stats.ipynb
@@ -10,7 +10,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10-final"
+   "version": "3.6.10"
   },
   "orig_nbformat": 2,
   "kernelspec": {
@@ -81,8 +81,34 @@
     "import geopandas as gpd\n",
     "import rasterstats\n",
     "from rasterstats import zonal_stats\n",
+    "from pathlib import Path\n",
     "\n",
     "print(f'Rasterstats : {rasterstats.__version__}')"
+   ]
+  },
+  {
+   "source": [
+    "## Choose the spectral index and the zonal statistic you want to calculate\n",
+    "\n",
+    "- min\n",
+    "- max\n",
+    "- mean\n",
+    "- count"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "index = 'NDVI'\n",
+    "\n",
+    "stat = 'mean'\n",
+    "\n",
+    "nodata_val = -10000"
    ]
   },
   {
@@ -96,74 +122,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Zonal Stats path are set to : /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/ZONAL_STATS/\n"
+     ]
+    }
+   ],
    "source": [
-    "grp_letter   = 'X'\n",
-    "student_name = 'ndeffense'\n",
+    "#computer_path = 'X:/'\n",
+    "computer_path = '/Volumes/nbdid-sst-lbrat2104/'\n",
+    "grp_letter    = 'X'\n",
     "\n",
-    "# When you are connected to the computer room\n",
-    "'''\n",
-    "vector_path = 'X:/data/VECTOR/'\n",
-    "raster_path = 'X:/data/RASTER/'\n",
-    "output_path = f'X:/GROUP_{grp_letter}/TP/{student_name}/DATA/'\n",
-    "'''\n",
-    "\n",
-    "# When you are connected to your personnal computer\n",
-    "vector_path = '/Users/Nicolas/OneDrive - UCL/LBRAT2104/VECTOR/'\n",
-    "raster_path = '/Volumes/nbdid-sst-lbrat2104/data/RASTER/'\n",
-    "output_path = '/Users/Nicolas/OneDrive - UCL/LBRAT2104/Output/'\n",
+    "# Directory for all work files\n",
+    "work_path = f'{computer_path}GROUP_{grp_letter}/WORK/'\n",
     "\n",
     "\n",
-    "print(f'Vector input path are set to : {vector_path}')\n",
-    "print(f'Raster input path are set to : {raster_path}')\n",
-    "print(f'Output path are set to       : {output_path}')\n",
+    "# ----- #\n",
+    "# INPUT #\n",
+    "# ----- #\n",
     "\n",
-    "# Directory to store all NDVI images\n",
-    "ndvi_path = f'{output_path}NDVI_ROI/'\n",
+    "# Directory where images are located\n",
+    "index_path = f'{work_path}{index}/'\n",
     "\n",
-    "# Create directories if missing\n",
-    "Path(ndvi_path).mkdir(parents=True, exist_ok=True)"
+    "# File where polygons are located\n",
+    "in_situ_file = f'{work_path}IN_SITU/WALLONIA_2018_IN_SITU_ROI.shp'\n",
+    "\n",
+    "# ------ #\n",
+    "# OUTPUT #\n",
+    "# ------ #\n",
+    "\n",
+    "zonal_path = f'{work_path}ZONAL_STATS/'\n",
+    "\n",
+    "Path(zonal_path).mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "print(f'Zonal Stats path are set to : {zonal_path}')"
    ]
   },
   {
+   "source": [
+    "## Compute zonal statistics"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Choose the statistic you want to calculate : min, max, mean, count, ...\n",
-    "stat = 'mean'\n",
-    "\n",
-    "# File where in-situ polygons are located\n",
-    "in_situ_file = f'{output_path}IN_SITU/WALLONIA_2018_IN_SITU_ROI.shp'\n",
-    "\n",
     "# New file with NDVI statistics for each polygons\n",
-    "in_situ_ndvi_file = f'{in_situ_file[:-4]}_with_NDVI_{stat}.shp'\n",
-    "\n",
+    "in_situ_ndvi_file = f'{zonal_path}{os.path.basename(in_situ_file)[:-4]}_with_{stat}_{index}.shp'\n",
     "\n",
     "if not os.path.isfile(in_situ_ndvi_file):\n",
     "\n",
-    "    # Get list of all NDVI files corresponding to tile 31UFS and sort it\n",
-    "    NDVI_list = sorted(glob.glob(f'{ndvi_path}*31UFS*_NDVI_*.tif'))\n",
+    "    # Get list of all spetral index files and sort it\n",
+    "    index_list = sorted(glob.glob(f'{index_path}*_{index}*.tif'))\n",
     "\n",
     "    # Initiate an empty list to store all \"zonal stat DataFrames\" that will be created during the loop\n",
     "    zs_dfs = []\n",
     "\n",
-    "    for NDVI_file in NDVI_list:\n",
+    "    for index_file in index_list:\n",
     "        \n",
     "        # Get date of the NDVI file\n",
-    "        date = os.path.basename(NDVI_file)[9:9+6]\n",
+    "        date = os.path.basename(index_file)[9:9+6]\n",
+    "        print(date)\n",
     "\n",
     "        # Compute the zonal stat and store output in a DataFrame\n",
     "        zs_df = pd.DataFrame(zonal_stats(vectors=in_situ_file,\n",
-    "                                         raster=NDVI_file,\n",
+    "                                         raster=index_file,\n",
     "                                         stats=stat))\n",
     "\n",
-    "        # Replace NaN by -10000 and convert to integer\n",
+    "        # Replace NaN by -10000\n",
     "        zs_df[np.isnan(zs_df)] = nodata_val\n",
-    "        zs_df = zs_df.astype(int)\n",
+    "\n",
+    "        # Convert to integer (if needed)\n",
+    "        #zs_df = zs_df.astype(int)\n",
     "\n",
     "        # Rename column with the date\n",
     "        zs_df = zs_df.rename(columns={stat: date})\n",
@@ -171,10 +210,12 @@
     "        # Add the zonal stat dataframe in the list to save it\n",
     "        zs_dfs.append(zs_df)\n",
     "\n",
-    "\n",
+    "    \n",
     "    # Once the loop is done, concatenate all the dataframe in one big dataframe\n",
     "    zs_final = pd.concat(zs_dfs, axis=1)\n",
+    "    print(zs_final)\n",
     "\n",
+    "    \n",
     "    # Read in-situ shapefile as a GeoDataFrame\n",
     "    in_situ_gdf = gpd.read_file(in_situ_file)\n",
     "\n",
@@ -182,7 +223,7 @@
     "    in_situ_with_ndvi_gdf = pd.concat([in_situ_gdf, zs_final], axis=1, join=\"inner\")\n",
     "\n",
     "    # Write into a new shapefile\n",
-    "    in_situ_with_ndvi_gdf.to_file(in_situ_ndvi_file)"
+    "    in_situ_with_ndvi_gdf.to_file(in_situ_ndvi_file)\n"
    ]
   }
  ]
