--- a/notebooks/zonal_stats.ipynb
+++ b/notebooks/zonal_stats.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -79,8 +79,12 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import geopandas as gpd\n",
+    "import rasterio\n",
+    "from rasterio import features\n",
+    "import rasterio.mask\n",
     "import rasterstats\n",
     "from rasterstats import zonal_stats\n",
+    "import matplotlib.pyplot as plt\n",
     "from pathlib import Path\n",
     "\n",
     "print(f'Rasterstats : {rasterstats.__version__}')"
@@ -165,7 +169,7 @@
   },
   {
    "source": [
-    "## Compute zonal statistics"
+    "## Zonal statistics"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -224,6 +228,61 @@
     "\n",
     "    # Write into a new shapefile\n",
     "    in_situ_with_ndvi_gdf.to_file(in_situ_ndvi_file)\n"
+   ]
+  },
+  {
+   "source": [
+    "## Zonal Histograms"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "FID 1877\n[0 2 4 7]\n[561672    123      1    224]\nFID 1878\n[0 2 4 5 7]\n[561312    684      6      5     13]\nFID 1879\n[0 2 4 5 7]\n[561655     37     18      2    308]\nFID 1880\n[0 2 4 5 7]\n[561742     40    226      3      9]\nFID 3251\n[0 2 4 7]\n[561269    365     12    374]\nFID 3252\n[0 2 4 5 7]\n[561194    330     64     33    399]\nFID 15441\n[0 2 3 4 5 7]\n[561579    181     13    105     46     96]\nFID 15607\n[0 4 7]\n[561730    271     19]\nFID 15608\n[0 2 4 7]\n[561373      1      6    640]\nFID 15609\n[0 5 7]\n[561421      9    590]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Open image with categorial value\n",
+    "im_file = f'{work_path}2_L2A_CLIPPED/T31UFS_20200116T105309_SCL_10m_ROI.tif'\n",
+    "\n",
+    "src = rasterio.open(im_file, \"r\")\n",
+    "\n",
+    "# Open vector with polygons\n",
+    "poly_file = in_situ_file\n",
+    "\n",
+    "gdf = gpd.read_file(poly_file)\n",
+    "\n",
+    "\n",
+    "for i in range(0,len(gdf))[0:10]:\n",
+    "    \n",
+    "    fid  = gdf.loc[i,'ID']\n",
+    "    geom = gdf.geometry[[i]]\n",
+    "    print(f'FID {fid}')\n",
+    "    \n",
+    "    # Crop the raster to the extent of the shape\n",
+    "    out_image, out_transform = rasterio.mask.mask(src, geom, crop=False)\n",
+    "\n",
+    "    out_image = out_image[0]\n",
+    "    #print(out_image.shape)\n",
+    "\n",
+    "    #plt.imshow(out_image, interpolation='none')\n",
+    "    #plt.show()\n",
+    "\n",
+    "    unique_elements, counts_elements = np.unique(out_image, return_counts=True)\n",
+    "    \n",
+    "    print(unique_elements)\n",
+    "    print(counts_elements)\n",
+    "\n",
+    "src.close()\n"
    ]
   }
  ]
