--- a/notebooks/spectral_indices.ipynb
+++ b/notebooks/spectral_indices.ipynb
@@ -71,6 +71,11 @@
     "\n",
     "$$ Brightness = \\sqrt{GREEN^{2}+RED^{2}+NIR^{2}+SWIR^{2}} = \\sqrt{B03^{2}+B04^{2}+B08^{2}+B11^{2}}$$\n",
     "\n",
+    "## SWI - Surface Waterproofing Index\n",
+    "\n",
+    "SWI, based on NDVI and NDWI, is a useful tool for monitoring waterproofing.\n",
+    "\n",
+    "$$ SWI = (NDVI - NDWI)^2 $$\n",
     "\n",
     "Source : https://eos.com/make-an-analysis/index-stack/"
    ],
@@ -104,7 +109,7 @@
   },
   {
    "source": [
-    "## Choose the spectral index to compute "
+    "## Set the work directory"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -113,86 +118,89 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "You chose to compute NDVI !\n"
-     ]
-    }
-   ],
-   "source": [
-    "index_name   = 'NDVI'\n",
-    "\n",
-    "if index_name == 'NDVI':\n",
-    "    bands_needed = [4,8]\n",
-    "\n",
-    "elif index_name == 'NDWI':\n",
-    "    bands_needed = [8,11]\n",
-    "\n",
-    "elif index_name == 'NDSI':\n",
-    "    bands_needed = [3,11]\n",
-    "\n",
-    "elif index_name == 'BRIGHTNESS':\n",
-    "    bands_needed = [3,4,8,11]\n",
-    "\n",
-    "elif index_name == 'NBR':\n",
-    "    bands_needed = [8,12]\n",
-    "\n",
-    "elif index_name == 'BAIS2':\n",
-    "    bands_needed = [4,6,7,8,12]\n",
-    "\n",
-    "print(f'You chose to compute {index_name} !')"
-   ]
-  },
-  {
-   "source": [
-    "## Set paths for input and output directories"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "General work path is set to   : /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/\nSpectral index path is set to : /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDVI/\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#computer_path = 'X:/'\n",
     "computer_path = '/Volumes/nbdid-sst-lbrat2104/'\n",
     "grp_letter    = 'X'\n",
     "\n",
     "# Directory for all work files\n",
-    "work_path = f'{computer_path}GROUP_{grp_letter}/WORK/'\n",
+    "work_path = f'{computer_path}GROUP_{grp_letter}/WORK/'"
+   ]
+  },
+  {
+   "source": [
+    "## Choose the spectral index to compute "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "You chose to compute SWI !\nYou need : ['NDVI', 'NDWI'] \n\nSpectral index path is set to : /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/SWI/\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Set the index name you want to compute !\n",
+    "# ---------------------------------------- #\n",
+    "index_name   = 'SWI'\n",
+    "# ---------------------------------------- #\n",
     "\n",
-    "# ----- #\n",
-    "# INPUT #\n",
-    "# ----- #\n",
-    " \n",
-    "im_path = f'{work_path}3_L2A_MASKED/'\n",
+    "if index_name == 'NDVI':\n",
+    "    bands_needed = ['B04','B08']\n",
+    "    list_im_path = [f'{work_path}3_L2A_MASKED/',\n",
+    "                    f'{work_path}3_L2A_MASKED/']\n",
     "\n",
-    "# ------ #\n",
-    "# OUTPUT #\n",
-    "# ------ #\n",
+    "elif index_name == 'NDWI':\n",
+    "    bands_needed = ['B08','B11']\n",
+    "    list_im_path = [f'{work_path}3_L2A_MASKED/',\n",
+    "                    f'{work_path}3_L2A_MASKED/']\n",
     "\n",
-    "index_path      = f'{work_path}{index_name}/'\n",
-    "index_calc_path = f'{work_path}{index_name}_CALC/'\n",
+    "elif index_name == 'NDSI':\n",
+    "    bands_needed = ['B03','B11']\n",
+    "    list_im_path = [f'{work_path}3_L2A_MASKED/',\n",
+    "                    f'{work_path}3_L2A_MASKED/']\n",
     "\n",
+    "elif index_name == 'BRIGHTNESS':\n",
+    "    bands_needed = ['B03','B04','B08','B11']\n",
+    "    list_im_path = [f'{work_path}3_L2A_MASKED/',\n",
+    "                    f'{work_path}3_L2A_MASKED/',\n",
+    "                    f'{work_path}3_L2A_MASKED/',\n",
+    "                    f'{work_path}3_L2A_MASKED/']\n",
+    "\n",
+    "elif index_name == 'NBR':\n",
+    "    bands_needed = ['B08','B12']\n",
+    "    list_im_path = [f'{work_path}3_L2A_MASKED/',\n",
+    "                    f'{work_path}3_L2A_MASKED/']\n",
+    "\n",
+    "elif index_name == 'BAIS2':\n",
+    "    bands_needed = ['B04','B06','B07','B8A','B12']\n",
+    "    list_im_path = [f'{work_path}3_L2A_MASKED/',\n",
+    "                    f'{work_path}3_L2A_MASKED/',\n",
+    "                    f'{work_path}3_L2A_MASKED/',\n",
+    "                    f'{work_path}3_L2A_MASKED/',\n",
+    "                    f'{work_path}3_L2A_MASKED/']\n",
+    "\n",
+    "elif index_name == 'SWI':\n",
+    "    bands_needed = ['NDVI','NDWI']\n",
+    "    list_im_path = [f'{work_path}NDVI/',\n",
+    "                    f'{work_path}NDWI/']\n",
+    "\n",
+    "print(f'You chose to compute {index_name} !')\n",
+    "print(f'You need : {bands_needed} \\n')\n",
+    "\n",
+    "index_path = f'{work_path}{index_name}/'\n",
     "\n",
     "Path(index_path).mkdir(parents=True, exist_ok=True)\n",
-    "Path(index_calc_path).mkdir(parents=True, exist_ok=True)\n",
     "\n",
-    "\n",
-    "print(f'General work path is set to   : {work_path}')\n",
     "print(f'Spectral index path is set to : {index_path}')"
    ]
   },
@@ -205,28 +213,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "We need band 4 to compute NDVI\n--> 12 images are found \n\nWe need band 8 to compute NDVI\n--> 12 images are found \n\nCheck if the number of images found for each band is the same !!\n"
+      "We need band/index NDVI to compute SWI\n--> 12 images are found \n\nWe need band/index NDWI to compute SWI\n--> 12 images are found \n\nCheck if the number of images found for each band/index is the same !!\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "for band_nb in bands_needed:\n",
+    "for i,band in enumerate(bands_needed):\n",
     "    \n",
-    "    print(f'We need band {band_nb} to compute {index_name}')\n",
-    "    list_im = glob.glob(f'{im_path}*_B*{band_nb}*.tif')\n",
+    "    print(f'We need band/index {band} to compute {index_name}')\n",
+    "    list_im = glob.glob(f'{list_im_path[i]}*{band}*.tif')\n",
     "    \n",
     "    nb_im = len(list_im)\n",
     "    print(f'--> {nb_im} images are found \\n')\n",
     "\n",
-    "print('Check if the number of images found for each band is the same !!')\n"
+    "print('Check if the number of images found for each band/index is the same !!')\n"
    ]
   },
   {
@@ -238,38 +245,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDVI/T31UFS_20200116T105309_NDVI.tif - already exists\n",
+      "Date : 20200116\n",
+      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/SWI/T31UFS_20200116T105309_SWI.tif - already exists\n",
       "-------------------------------------------\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDVI/T31UFS_20200212T104049_NDVI.tif - already exists\n",
+      "Date : 20200212\n",
+      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/SWI/T31UFS_20200212T104049_SWI.tif - already exists\n",
       "-------------------------------------------\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDVI/T31UFS_20200316T104709_NDVI.tif - already exists\n",
+      "Date : 20200316\n",
+      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/SWI/T31UFS_20200316T104709_SWI.tif - already exists\n",
       "-------------------------------------------\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDVI/T31UFS_20200417T104021_NDVI.tif - already exists\n",
+      "Date : 20200417\n",
+      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/SWI/T31UFS_20200417T104021_SWI.tif - already exists\n",
       "-------------------------------------------\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDVI/T31UFS_20200520T105031_NDVI.tif - already exists\n",
+      "Date : 20200520\n",
+      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/SWI/T31UFS_20200520T105031_SWI.tif - already exists\n",
       "-------------------------------------------\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDVI/T31UFS_20200621T103629_NDVI.tif - already exists\n",
+      "Date : 20200621\n",
+      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/SWI/T31UFS_20200621T103629_SWI.tif - already exists\n",
       "-------------------------------------------\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDVI/T31UFS_20200719T105031_NDVI.tif - already exists\n",
+      "Date : 20200719\n",
+      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/SWI/T31UFS_20200719T105031_SWI.tif - already exists\n",
       "-------------------------------------------\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDVI/T31UFS_20200813T104629_NDVI.tif - already exists\n",
+      "Date : 20200813\n",
+      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/SWI/T31UFS_20200813T104629_SWI.tif - already exists\n",
       "-------------------------------------------\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDVI/T31UFS_20200914T104031_NDVI.tif - already exists\n",
+      "Date : 20200914\n",
+      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/SWI/T31UFS_20200914T104031_SWI.tif - already exists\n",
       "-------------------------------------------\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDVI/T31UFS_20201019T103959_NDVI.tif - already exists\n",
+      "Date : 20201019\n",
+      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/SWI/T31UFS_20201019T103959_SWI.tif - already exists\n",
       "-------------------------------------------\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDVI/T31UFS_20201118T104329_NDVI.tif - already exists\n",
+      "Date : 20201118\n",
+      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/SWI/T31UFS_20201118T104329_SWI.tif - already exists\n",
       "-------------------------------------------\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDVI/T31UFS_20201218T104349_NDVI.tif - already exists\n",
+      "Date : 20201218\n",
+      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/SWI/T31UFS_20201218T104349_SWI.tif - already exists\n",
       "-------------------------------------------\n"
      ]
     }
@@ -280,16 +297,19 @@
     "# Compute the SI for all dates\n",
     "for i in range(0,nb_im):\n",
     "    \n",
-    "    # Create a list with all reflectance images paths needed to compute the SI\n",
-    "    list_im = []\n",
+    "    im = sorted(glob.glob(f'{list_im_path[0]}*{bands_needed[0]}*.tif'))[i]\n",
+    "    date = os.path.basename(im)[7:15]\n",
+    "    print(f'Date : {date}')\n",
     "\n",
-    "    for band in bands_needed:\n",
-    "        im = sorted(glob.glob(f'{im_path}*_B*{band}*.tif'))[i]\n",
+    "    list_im = [im]\n",
+    "\n",
+    "    for n,band in enumerate(bands_needed[1:]):\n",
+    "        im = glob.glob(f'{list_im_path[n+1]}*{date}*{band}*.tif')[0]\n",
     "        list_im.append(im)\n",
-    "    \n",
+    "\n",
     "    # Name the output SI file\n",
     "    index_file = f'{index_path}{os.path.basename(list_im[0])[0:22]}_{index_name}.tif'\n",
-    "\n",
+    "    \n",
     "    if not os.path.isfile(index_file):\n",
     "        \n",
     "        # Create a list with all reflectance images needed to compute the SI in Numpy array\n",
@@ -354,6 +374,12 @@
     "            \n",
     "            index_arr = (1-sqrt((redEdge_B6*redEdge_B7*nir)/red))*((swir-nir)/(sqrt(swir+nir))+1)\n",
     "        \n",
+    "        elif index_name == 'SWI':\n",
+    "            ndvi = list_im_arr[0] # NDVI\n",
+    "            ndwi = list_im_arr[1] # NDWI\n",
+    "\n",
+    "            index_arr = np.square(ndvi - ndwi)\n",
+    "        \n",
     "        # Write Spectral Index image into GeoTIFF\n",
     "\n",
     "        dst = rasterio.open(index_file, \"w\", **profile)\n",
@@ -364,15 +390,29 @@
     "    \n",
     "    else:\n",
     "        print(f'--> {index_file} - already exists')\n",
-    "        print('-------------------------------------------')\n"
+    "        print('-------------------------------------------')\n",
+    "\n"
    ]
   },
   {
    "source": [
-    "## Compute difference between 2 spectral indices"
+    "## Compute difference between 2 spectral indices\n",
+    "\n",
+    "### Set the output directory"
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "index_calc_path = f'{work_path}{index_name}_CALC/'\n",
+    "\n",
+    "Path(index_calc_path).mkdir(parents=True, exist_ok=True)"
+   ]
   },
   {
    "cell_type": "code",
