--- a/notebooks/random_forest_classification.ipynb
+++ b/notebooks/random_forest_classification.ipynb
@@ -38,14 +38,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Numpy : 1.19.2\nPandas : 1.1.5\nGeoPandas : 0.8.1\nScikit-learn: 0.24.1\n"
+      "Numpy : 1.19.2\nPandas : 1.1.5\nGeoPandas : 0.8.1\nScipy: 1.5.2\nScikit-learn: 0.24.1\n"
      ]
     }
    ],
@@ -58,7 +58,7 @@
     "from rasterio import features\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
+    "import scipy\n",
     "import sklearn\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "#from sklearn.datasets import make_classification\n",
@@ -70,6 +70,7 @@
     "print(f'Numpy : {np.__version__}')\n",
     "print(f'Pandas : {pd.__version__}')\n",
     "print(f'GeoPandas : {gpd.__version__}')\n",
+    "print(f'Scipy: {scipy.__version__}')\n",
     "print(f'Scikit-learn: {sklearn.__version__}')"
    ]
   },
